# ssh-forward

./: AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: mod.rs  mod_commands.rs
src-tauri/src/ssh/: client.rs  forwarder.rs
src/components/: ForwardForm.vue  ForwardList.vue  ImportConfigDialog.vue  ImportSshConfig.vue  ServerForm.vue  ServerList.vue  Toast.vue
src/stores/: servers.ts
src/types/: index.ts
src/utils/: config.ts  toast.ts
