[package]
name = "ssh-forward"
version = "0.1.0"
description = "SSH Port Forward Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "ssh_forward_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.49"
russh-keys = "0.49"
ssh2-config = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
log = "0.4"
async-trait = "0.1"
